--- a/portfolio.html
+++ b/portfolio.html
@@ -94,13 +94,19 @@
           <ul class="development">
             <li class="development-list list">
               <a href="#" class="development-foto">
-                <img
-                  src="./images2/img1.jpg"
-                  width="370"
-                  height="295"
-                  alt="Фото на мониторе"
-                />
-
+                <div class="development-top-wrap">
+                  <img
+                    src="./images2/img1.jpg"
+                    width="370"
+                    height="295"
+                    alt="Фото на мониторе"
+                  />
+                  <p class="development-top-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="development-text">
                   <h2 class="development-title">Технокряк</h2>
                   <p class="development-pre-title">Веб-сайт</p>
@@ -110,12 +116,19 @@
 
             <li class="development-list list">
               <a href="#" class="development-foto">
-                <img
-                  src="./images2/img2.jpg"
-                  width="370"
-                  height="295"
-                  alt="Игра в баскетбол"
-                />
+                <div class="development-top-wrap">
+                  <img
+                    src="./images2/img2.jpg"
+                    width="370"
+                    height="295"
+                    alt="Игра в баскетбол"
+                  />
+                  <p class="development-top-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="development-text">
                   <h2 class="development-title">
                     Постер New Orlean vs Golden Star
@@ -127,12 +140,19 @@
 
             <li class="development-list list">
               <a href="#" class="development-foto">
-                <img
-                  src="./images2/img3.jpg"
-                  width="370"
-                  height="295"
-                  alt="Название ресторана"
-                />
+                <div class="development-top-wrap">
+                  <img
+                    src="./images2/img3.jpg"
+                    width="370"
+                    height="295"
+                    alt="Название ресторана"
+                  />
+                  <p class="development-top-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="development-text">
                   <h2 class="development-title">Ресторан Seafood</h2>
                   <p class="development-pre-title">Приложение</p>
@@ -142,12 +162,19 @@
 
             <li class="development-list list">
               <a href="#" class="development-foto">
-                <img
-                  src="./images2/img4.jpg"
-                  width="370"
-                  height="295"
-                  alt="Наушники"
-                />
+                <div class="development-top-wrap">
+                  <img
+                    src="./images2/img4.jpg"
+                    width="370"
+                    height="295"
+                    alt="Наушники"
+                  />
+                  <p class="development-top-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="development-text">
                   <h2 class="development-title">Проект Prime</h2>
                   <p class="development-pre-title">Маркетинг</p>
@@ -157,12 +184,19 @@
 
             <li class="development-list list">
               <a href="#" class="development-foto">
-                <img
-                  src="./images2/img5.jpg"
-                  width="370"
-                  height="295"
-                  alt="Две коробки"
-                />
+                <div class="development-top-wrap">
+                  <img
+                    src="./images2/img5.jpg"
+                    width="370"
+                    height="295"
+                    alt="Две коробки"
+                  />
+                  <p class="development-top-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="development-text">
                   <h2 class="development-title">Проект Boxes</h2>
                   <p class="development-pre-title">Приложение</p>
@@ -172,12 +206,19 @@
 
             <li class="development-list list">
               <a href="#" class="development-foto">
-                <img
-                  src="./images2/img6.jpg"
-                  width="370"
-                  height="295"
-                  alt="Монитор"
-                />
+                <div class="development-top-wrap">
+                  <img
+                    src="./images2/img6.jpg"
+                    width="370"
+                    height="295"
+                    alt="Монитор"
+                  />
+                  <p class="development-top-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="development-text">
                   <h2 class="development-title">Inspiration has no Borders</h2>
                   <p class="development-pre-title">Веб-сайт</p>
@@ -187,12 +228,19 @@
 
             <li class="development-list list">
               <a href="#" class="development-foto">
-                <img
-                  src="./images2/img7.jpg"
-                  width="370"
-                  height="295"
-                  alt="Развернутый жyрнал"
-                />
+                <div class="development-top-wrap">
+                  <img
+                    src="./images2/img7.jpg"
+                    width="370"
+                    height="295"
+                    alt="Развернутый жyрнал"
+                  />
+                  <p class="development-top-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="development-text">
                   <h2 class="development-title">Издание Limited Edition</h2>
                   <p class="development-pre-title">Дизайн</p>
@@ -202,12 +250,19 @@
 
             <li class="development-list list">
               <a href="#" class="development-foto">
-                <img
-                  src="./images2/img8.jpg"
-                  width="370"
-                  height="295"
-                  alt="Проспект с надписью"
-                />
+                <div class="development-top-wrap">
+                  <img
+                    src="./images2/img8.jpg"
+                    width="370"
+                    height="295"
+                    alt="Проспект с надписью"
+                  />
+                  <p class="development-top-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="development-text">
                   <h2 class="development-title">Проект LAB</h2>
                   <p class="development-pre-title">Маркетинг</p>
@@ -217,12 +272,19 @@
 
             <li class="development-list list">
               <a href="#" class="development-foto">
-                <img
-                  src="./images2/img9.jpg"
-                  width="370"
-                  height="295"
-                  alt="Работа на ноутбуке"
-                />
+                <div class="development-top-wrap">
+                  <img
+                    src="./images2/img9.jpg"
+                    width="370"
+                    height="295"
+                    alt="Работа на ноутбуке"
+                  />
+                  <p class="development-top-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="development-text">
                   <h2 class="development-title">Growing Business</h2>
                   <p class="development-pre-title">Приложение</p>
