--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
         </nav>
         <ul class="connect-list">
           <li class="mail">
-            <a href="mailto:info@devstudio.com" class="header-link link">
+            <a href="mailto:info@devstudio.com" class="heaper-link link">
               <svg class="contact-icon" width="16" height="12">
                 <use href=".//images/icons.svg.svg#icon-envelope"></use>
               </svg>
@@ -54,7 +54,7 @@
             </a>
           </li>
           <li class="tel">
-            <a href="tel:+380961111111" class="header-link link">
+            <a href="tel:+380961111111" class="heaper-link link">
               <svg class="contact-icon" width="10" height="16">
                 <use href=".//images/icons.svg.svg#icon-smartphone"></use>
               </svg>
