--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 height="294"
                 alt="working-moment1.jpg"
               />
+              <p class="work-foto-text">Десктопные приложения</p>
             </li>
             <li class="work-foto list">
               <img
@@ -147,6 +148,7 @@
                 height="294"
                 alt="working-moment2.jpg"
               />
+              <p class="work-foto-text">Мобильные приложения</p>
             </li>
             <li class="work-foto list">
               <img
@@ -155,6 +157,7 @@
                 height="294"
                 alt="working-moment.jpg"
               />
+              <p class="work-foto-text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
