--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <ul class="item-soc">
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use
                           href=".//images/icons.svg.svg#icon-instagram"
                         ></use>
@@ -191,21 +191,21 @@
 
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use href=".//images/icons.svg.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use href=".//images/icons.svg.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use href=".//images/icons.svg.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -227,7 +227,7 @@
                 <ul class="item-soc">
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use
                           href=".//images/icons.svg.svg#icon-instagram"
                         ></use>
@@ -237,21 +237,21 @@
 
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use href=".//images/icons.svg.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use href=".//images/icons.svg.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use href=".//images/icons.svg.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -273,7 +273,7 @@
                 <ul class="item-soc">
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use
                           href=".//images/icons.svg.svg#icon-instagram"
                         ></use>
@@ -283,21 +283,21 @@
 
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use href=".//images/icons.svg.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use href=".//images/icons.svg.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use href=".//images/icons.svg.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -319,7 +319,7 @@
                 <ul class="item-soc">
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use
                           href=".//images/icons.svg.svg#icon-instagram"
                         ></use>
@@ -329,21 +329,21 @@
 
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use href=".//images/icons.svg.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use href=".//images/icons.svg.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon">
+                      <svg class="link-icon" width="20px" , height="20px">
                         <use href=".//images/icons.svg.svg#icon-linkedin"></use>
                       </svg>
                     </a>
