--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         <nav class="header-nav">
           <ul class="header-list list">
             <li class="header-item">
-              <a href="./index.html" class="header-link link"
-                ><span class="studio-title head">Студия</span>
-              </a>
+              <a href="./index.html" class="header-link link current">Студия</a>
             </li>
             <li class="header-item">
               <a href="./portfolio.html" class="header-link link">Портфолио</a>
@@ -181,7 +179,7 @@
                 <ul class="item-soc">
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use
                           href=".//images/icons.svg.svg#icon-instagram"
                         ></use>
@@ -191,21 +189,21 @@
 
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use href=".//images/icons.svg.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use href=".//images/icons.svg.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use href=".//images/icons.svg.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -227,7 +225,7 @@
                 <ul class="item-soc">
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use
                           href=".//images/icons.svg.svg#icon-instagram"
                         ></use>
@@ -237,21 +235,21 @@
 
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use href=".//images/icons.svg.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use href=".//images/icons.svg.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use href=".//images/icons.svg.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -273,7 +271,7 @@
                 <ul class="item-soc">
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use
                           href=".//images/icons.svg.svg#icon-instagram"
                         ></use>
@@ -283,21 +281,21 @@
 
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use href=".//images/icons.svg.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use href=".//images/icons.svg.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use href=".//images/icons.svg.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -319,7 +317,7 @@
                 <ul class="item-soc">
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use
                           href=".//images/icons.svg.svg#icon-instagram"
                         ></use>
@@ -329,21 +327,21 @@
 
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use href=".//images/icons.svg.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use href=".//images/icons.svg.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-soc-item">
                     <a href="" class="item-soc-link link">
-                      <svg class="link-icon" width="20px" , height="20px">
+                      <svg class="link-icon" width="20px" height="20px">
                         <use href=".//images/icons.svg.svg#icon-linkedin"></use>
                       </svg>
                     </a>
