--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,8 @@
               </a>
             </li>
             <li class="header-item">
-              <a href="./index.html" class="header-link link"
-                ><span class="studio-title head">Портфолио</span>
+              <a href="./index.html" class="header-link link current"
+                >Портфолио
               </a>
             </li>
             <li class="header-item">
